# CarePilot

./: .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  ADVANCED_AGENT_UX_STRATEGY.md  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CODEBASE_IMPROVEMENT_ANALYSIS.md  CODEBASE_INDEX.md  CODEBASE_MAP.md  CONSOLIDATED_STRATEGY_AND_ROADMAP.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  MASTER_TECHNICAL_SPEC.md  MODULES.md  Makefile  PERFORMANCE_AUDIT_AND_OPTIMIZATION_PLAN.md  PERSONALIZATION_CONTEXT_UX_STRATEGY.md  PLAN.md  README.md  REFACTOR_PLAN.md  SAFETY.md  SYSTEM_ROADMAP.md  TODO.md  UNIFIED_OPTIMIZATION_STRATEGY.md  alembic.ini  backend-problems.md  care_pilot_api.db-shm  care_pilot_api.db-wal  care_pilot_auth.db-shm  care_pilot_auth.db-wal  compose.dev.yml  database_harness.md  emotion-workflow.md  eslint.config.mjs  main.py  (+13 more)
.changeset/: config.json
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_refactor.md
.github/workflows/: ci.yml  pr-policy.yml
agents/: __init__.py  chat_agent.py  code_agent.py  health_tracker.py  memory_manager.py  search_agent.py
apps/: __init__.py
apps/api/: __init__.py  run.py  run_reminder_scheduler.py
apps/inference/: run.py
apps/web/: .env.example  .eslintrc.json  eslint.config.js  eslint.config.mjs  next.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
apps/workers/: __init__.py  reminder_worker.py  run.py
backend/: deps.py  main.py
backend/routers/: chat.py  dashboard.py  emotion.py  medications.py
data/: clinical_safety.db-shm  clinical_safety.db-wal
data/drugs/: diabetes_drugs.json  hypertension_drugs.json  lipid_drugs.json
data/emotion/: emotion_support.json
data/evaluation/: safety_gold_standard.json
data/food/: sg_drinks_and_tips.json  sg_hawker_food.json
data/seeds/: demo_accounts.json  demo_profiles.json
data/synthetic/: medication_intake_samples.txt
design-system/care-pilot/: MASTER.md
design-system/dietary-guardian/: MASTER.md
docs/: ARCHITECTURE_AND_ROADMAP.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  REFACTOR_HISTORY.md  RELIABILITY.md  SECURITY.md  agent-modules.md  api-auth-contract.md  api-emotions-contract.md  api-recommendation-agent-contract.md  api-suggestions-contract.md  architecture-v1.md  branching-strategy.md  codebase-walkthrough.md  config-reference.md  deployment-readiness.md  developer-guide.md  emotion-integration.md  emotion_model_cache.md  feature-audit.md  food-normalization.md  glossary.md  hackathon-answer.md  hackathon_submission.md  meal-analysis-agents.md  nightly-ops.md  observability-map.md  operations-runbook.md  prompt_catalog.md  rbac-matrix.md  refactor_plan.md  roadmap-v1.md  suggestions-access-control-matrix.md  suggestions-ux-before-after.md  system-overview.md  system_architecture.md  (+2 more)
docs/api/: emotions.md  rbac.md
docs/architecture/: agent-layer-reference.md  architecture.drawio  event_driven_choreography.md  meal-analysis-architecture.drawio  meal-analysis.md  multi_modal_memory_roadmap.md  target-system-architecture.drawio
docs/archive/: 2026-03-11-feature-first-big-bang-refactor-design.md  2026-03-15-reminders-page-clarity-manual-create-design.md  README.md
docs/changes/: 2026-03-12-balanced-ui-simplification.md  2026-03-12-chat-recent-activity-context.md  2026-03-12-chat-refactor-changes.md  2026-03-12-chat-stream-events.md  2026-03-12-chat-streaming-stability.md  2026-03-12-chat-tool-context.md  2026-03-12-clinical-calm-ui.md  2026-03-12-emotion-workflow-refactor.md  2026-03-12-food-normalization-seed.md  2026-03-12-impeccable-ui-refactor.md  2026-03-12-meal-analysis-logging.md  2026-03-12-memory-service-clear.md  2026-03-12-reminder-settings-move.md  2026-03-13-chat-meal-continuation.md  2026-03-13-chat-meal-logging.md  2026-03-13-clinical-calm-style.md  (+2 more)
frontend/: next.config.mjs  package-lock.json  package.json
ingestion/: foodinfo_ingest.py  usermed_ingest.py
migrations/: env.py
refactor/: README.md  current-vs-proposed.md  data-model.md  execution-plan.md  hackathon-answer.md  master-plan.md  pydanticai-patterns.md  safety-spec.md  service-contracts.md  system-architecture.md  tech-stack.md
reports/: chat-agent-ui-audit.md  nightly_2026-02-26.md  nightly_2026-02-27.md  nightly_TEMPLATE.md
routes/: __init__.py  base.py  code_route.py  drug_route.py  food_route.py  router.py
scripts/: cache_emotion_models.py  check-readiness.sh  cli.py  dev-api.sh  dev-infra.sh  dev-web.sh  dev.sh  dg.py  housekeeping.py  local_dietary_test.py  migrate-postgres.sh  migrate-redis-keyspace.py  nightly-report.sh  smoke-postgres-redis.sh  web-env.sh
src/: __init__.py  app.py  diagnosis.md  logfire.pyi  main.py
tests/: conftest.py  test_agent_registry.py  test_alerting_outbox.py  test_analytics_dashboard_metrics.py  test_app_upload_flow.py  test_biomarker_normalization.py  test_canonical_food_service.py  test_companion_web_surfaces.py  test_coordination_store.py  test_dg_cli.py  test_dietary_agent_import.py  test_docs_links.py  test_emotion_service.py  test_food_ingestion.py  test_hawker_vision.py  test_hawker_vision_image_input.py  test_hawker_vision_multi_item.py  test_household_access_policy.py  test_inference_capability_matrix.py  test_inference_engine.py  test_inference_retry_config.py  test_integration_user_story_1.py  test_integration_user_story_2.py  test_integration_user_story_3.py  test_local_model_profiles.py  test_logging_config.py  test_main_config_bootstrap.py  test_mcr_metrics.py  test_meal_enriched_event_consumers.py  test_meal_normalization.py  test_meal_record_persistence.py  test_media_ingestion.py  test_medication_scheduler.py  test_memory_services.py  test_message_composer.py  test_notification_service.py  test_persona.py  test_platform_tools.py  test_precommit_scripts_exist.py  test_profile_tools.py  (+33 more)
tools/: precommit_ruff.sh  precommit_ty.sh  run_dev.sh  run_mypy.sh  run_test.sh  validate.sh
(+2345 files in other folders)
