[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "dietary-tools"
dynamic = ["version"]
description = "Dietary Guardian: meal vision, medication reminders, and biomarker-grounded guidance"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Wang Zhoufu" },
]
maintainers = [
    { name = "Dietary Guardian Engineering Team" },
]
keywords = ["dietary-monitoring", "healthcare", "pydantic-ai", "medical-agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "License :: Other/Proprietary License",
    "Intended Audience :: Developers",
]
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.64.0",
    "logfire>=4.25.0",
    "itsdangerous>=2.2.0",
    "pillow>=11.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pydantic-ai>=1.62.0",
    "email-validator>=2.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "rich>=14.3.3",
    "typer>=0.16.1",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Fpengz/dietary_tool"
Repository = "https://github.com/Fpengz/dietary_tool"
Issues = "https://github.com/Fpengz/dietary_tool/issues"
Documentation = "README.md"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/dietary_guardian"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dietary_guardian/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/dietary_guardian",
    "src/main.py",
    "README.md",
    "pyproject.toml",
]

[tool.mypy]
# Ensure mypy resolves local package modules under src/ to avoid duplicate-module mapping
mypy_path = ["src"]
namespace_packages = true
ignore_missing_imports = false
strict = true
files = ["dietary_guardian"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests", "apps/api/tests"]
addopts = "-q"
python_files = ["test_*.py"]
filterwarnings = [
    "error::DeprecationWarning:dietary_guardian.*",
]
