[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "CarePilot"
version = "0.1.0"
description = "CarePilot: meal vision, medication reminders, and biomarker-grounded guidance"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Wang Zhoufu" },
]
maintainers = [
    { name = "Wang Zhoufu" },
]
keywords = ["dietary-monitoring", "healthcare", "pydantic-ai", "medical-agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "License :: Other/Proprietary License",
    "Intended Audience :: Developers",
]
dependencies = [
    "alembic>=1.18.4",
    "chromadb>=1.5.5",
    "ddgs>=9.11.3",
    "e2b-code-interpreter>=2.4.1",
    "fastapi>=0.116.1",
    "itsdangerous>=2.2.0",
    "langchain-core>=1.2.20",
    "langfuse>=4.0.0",
    "langgraph>=1.1.3",
    "librosa>=0.11.0",
    "logfire>=4.25.0",
    "matplotlib>=3.10.8",
    "mem0ai>=1.0.0",
    "numpy>=2.4.3",
    "omegaconf>=2.3.0",
    "peft>=0.17.1",
    "pillow>=11.0.0",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-ai>=1.62.0",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "sentence-transformers>=5.2.3",
    "soundfile>=0.13.1",
    "sqlmodel>=0.0.37",
    "tenacity>=9.1.4",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "typer>=0.16.1",
    "uvicorn>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/Fpengz/CarePilot"
Repository = "https://github.com/Fpengz/CarePilot"
Issues = "https://github.com/Fpengz/CarePilot/issues"
Documentation = "https://github.com/Fpengz/CarePilot#readme"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/care_pilot"]

[tool.hatch.build.targets.sdist]
include = [
    "src/care_pilot",
    "README.md",
    "pyproject.toml",
]

[tool.mypy]
# Ensure mypy resolves local package modules under src/ to avoid duplicate-module mapping
mypy_path = ["src"]
namespace_packages = true
ignore_missing_imports = false
strict = true
show_error_codes = true
pretty = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_any_generics = true
warn_return_any = true
files = ["care_pilot"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["node_modules", "dist", "build", ".venv", ".ruff_cache", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long, handled by ruff format
    "B008", # Do not perform function call Depends in argument defaults (idiomatic FastAPI)
]

[tool.ruff.lint.isort]
known-first-party = ["care_pilot"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]
"src/care_pilot/platform/memory/store.py" = ["ARG002"] # Stub methods


[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-q"
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error::DeprecationWarning:care_pilot.*",
]
